--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "homepage": "https://github.com/pgoggles/eatabelserver#readme",
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1",
+    "express": "^4.17.1"
   }
 }
